--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,8 +46,8 @@ javac.test.classpath=\
     ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
+javadoc.additionalparam=-linksource
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
@@ -55,9 +55,9 @@ javadoc.notree=false
 javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-main.class=planetproject.Universe
+javadoc.version=true
+javadoc.windowtitle=Planet Simulation
+main.class=planetproject.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
